src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@responsive {
  .text-shadow {
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
  }

  .text-shadow-none {
    text-shadow: none;
  }
}

html {
  scroll-behavior: smooth;
}

.divider {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: auto;
}

@layer utilities {
  .text-gradient {
    background-clip: text;
    -webkit-text-fill-color: transparent;
  }
}

@layer components {
  .btn {
    @apply px-6 py-2 text-sm font-medium rounded;
  }

  .btn-primary {
    @apply text-white bg-primary;
  }

  .btn-primary:hover {
    @apply shadow bg-primarydark;
  }

  .btn-secondary {
    @apply text-white bg-secondary;
  }

  .btn-secondary:hover {
    @apply shadow bg-secondarydark;
  }

  .btn-tertiary {
    @apply text-white bg-tertiary;
  }

  .btn-tertiary:hover {
    @apply shadow bg-tertiarydark;
  }

  .social-circle {
    @apply grid w-8 h-8 rounded-full place-items-center;
  }

  .title {
    @apply text-3xl font-extrabold leading-normal text-gray-800 md:text-4xl lg:text-5xl;
  }

  .subtitle {
    @apply text-2xl font-extrabold leading-normal text-gray-800 md:text-3xl lg:text-4xl;
  }

  .title-colorful {
    @apply text-gradient bg-gradient-to-r from-green-400 to-blue-500;
  }
}

.twitter-blue {
  color: #55acee;
}

.addeventatc.button {
  background-color: #7289da !important;
  border-radius: 3px !important;
  color: #fff !important;
  padding: 8px !important;
}

.addeventatc_dropdown {
  overflow: hidden;
}
.addeventatc_icon {
  display: none;
}
.copyx {
  display: none !important;
}

